Stopgraph building does not work yet, but idea is there Dijkstra should work idk
Former-commit-id: 7289a727d50e3a381d5917836b537b5c60f77a8b
Former-commit-id: 6221d82690e74d896240afdea5037c950267ac05